recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:4: error: not found: value spirale
  spirale(steps-1,angle,lenght+3,increment)
  ^Spiral:4: error: not found: value lenght
  spirale(steps-1,angle,lenght+3,increment)
                        ^