recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  avance(length)
  gauche(angle)
  spirale(steps-1,angle,lenght+3,increment)
}